Fixed line overflow issue with disabled JavaScript. Closes #240

--- a/assets/sass/_bilberry-hugo-theme.scss
+++ b/assets/sass/_bilberry-hugo-theme.scss
@@ -38,6 +38,7 @@
             white-space: pre;
             background: #3f3f3f;
             color: #dcdcdc;
+            overflow-x: auto;
         }
     }
 
